{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 30,
  "lineage": "7a3f1993-3b95-2144-d8d3-829fae508052",
  "resources": [
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "internal_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:905418236735:loadbalancer/app/dev-chatbot23-backend-alb/e089cdb9a8095f3d",
            "arn_suffix": "app/dev-chatbot23-backend-alb/e089cdb9a8095f3d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-chatbot23-backend-alb-675458029.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:905418236735:loadbalancer/app/dev-chatbot23-backend-alb/e089cdb9a8095f3d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-chatbot23-backend-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-031b771bd8de4edff"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04e17177f13047db2"
              },
              {
                "subnet_id": "subnet-08938259110286bf2"
              }
            ],
            "subnets": [
              "subnet-04e17177f13047db2",
              "subnet-08938259110286bf2"
            ],
            "vpc_id": "vpc-0eaf7f355b9801de2",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.ALB.aws_security_group.internal_alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "internet_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:905418236735:loadbalancer/app/dev-chatbot23-frontend-alb/8c09085808d36f88",
            "arn_suffix": "app/dev-chatbot23-frontend-alb/8c09085808d36f88",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-chatbot23-frontend-alb-550446289.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:905418236735:loadbalancer/app/dev-chatbot23-frontend-alb/8c09085808d36f88",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-chatbot23-frontend-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00c30fb285026783b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04e17177f13047db2"
              },
              {
                "subnet_id": "subnet-08938259110286bf2"
              }
            ],
            "subnets": [
              "subnet-04e17177f13047db2",
              "subnet-08938259110286bf2"
            ],
            "vpc_id": "vpc-0eaf7f355b9801de2",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.ALB.aws_security_group.internet_alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "internal_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:905418236735:listener/app/dev-chatbot23-backend-alb/e089cdb9a8095f3d/761abb3b768ad13d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:905418236735:targetgroup/dev-chatbot23-backend-tg/49e8caf33d74a034",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:905418236735:listener/app/dev-chatbot23-backend-alb/e089cdb9a8095f3d/761abb3b768ad13d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:905418236735:loadbalancer/app/dev-chatbot23-backend-alb/e089cdb9a8095f3d",
            "mutual_authentication": [],
            "port": 8000,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ALB.aws_lb.internal_alb",
            "module.ALB.aws_lb_target_group.internal_alb_tg",
            "module.ALB.aws_security_group.internal_alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "internet_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:905418236735:listener/app/dev-chatbot23-frontend-alb/8c09085808d36f88/f03c7f84f9290f63",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:905418236735:targetgroup/dev-chatbot23-frontend-tg/4bafbd04f134d466",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:905418236735:listener/app/dev-chatbot23-frontend-alb/8c09085808d36f88/f03c7f84f9290f63",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:905418236735:loadbalancer/app/dev-chatbot23-frontend-alb/8c09085808d36f88",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ALB.aws_lb.internet_alb",
            "module.ALB.aws_lb_target_group.internet_alb_tg",
            "module.ALB.aws_security_group.internet_alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "internal_alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:905418236735:targetgroup/dev-chatbot23-backend-tg/49e8caf33d74a034",
            "arn_suffix": "targetgroup/dev-chatbot23-backend-tg/49e8caf33d74a034",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:905418236735:targetgroup/dev-chatbot23-backend-tg/49e8caf33d74a034",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:905418236735:loadbalancer/app/dev-chatbot23-backend-alb/e089cdb9a8095f3d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-chatbot23-backend-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0eaf7f355b9801de2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "internet_alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:905418236735:targetgroup/dev-chatbot23-frontend-tg/4bafbd04f134d466",
            "arn_suffix": "targetgroup/dev-chatbot23-frontend-tg/4bafbd04f134d466",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/forgot-password",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:905418236735:targetgroup/dev-chatbot23-frontend-tg/4bafbd04f134d466",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:905418236735:loadbalancer/app/dev-chatbot23-frontend-alb/8c09085808d36f88"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-chatbot23-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0eaf7f355b9801de2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418236735:security-group/sg-0e0029426daa901d8",
            "description": "Security group for RDS database",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-031b771bd8de4edff"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0029426daa901d8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-031b771bd8de4edff"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "dev-chatbot-db-security-group20250206053739884700000006",
            "name_prefix": "dev-chatbot-db-security-group",
            "owner_id": "905418236735",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-chatbot-db-security-group"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-chatbot-db-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eaf7f355b9801de2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ALB.aws_security_group.internal_alb_sg",
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418236735:security-group/sg-0a23567ed9f756b06",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a23567ed9f756b06",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00c30fb285026783b"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00c30fb285026783b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-frontend-app-sg-20250206053739563000000005",
            "name_prefix": "dev-frontend-app-sg-",
            "owner_id": "905418236735",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-frontend-app-sg-"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-frontend-app-sg-"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eaf7f355b9801de2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ALB.aws_security_group.internet_alb_sg",
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418236735:security-group/sg-031b771bd8de4edff",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-031b771bd8de4edff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "dev-backend-alb-sg-20250206053736713600000003",
            "name_prefix": "dev-backend-alb-sg-",
            "owner_id": "905418236735",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-backend-alb-sg-"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-backend-alb-sg-"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eaf7f355b9801de2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internet_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418236735:security-group/sg-00c30fb285026783b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c30fb285026783b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-frontend-alb-sg-20250206053736738300000004",
            "name_prefix": "dev-frontend-alb-sg-",
            "owner_id": "905418236735",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-frontend-alb-sg-"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-frontend-alb-sg-"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eaf7f355b9801de2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d22bb3d7ce10b19",
            "arn": "arn:aws:ec2:ap-south-1:905418236735:elastic-ip/eipalloc-02d22bb3d7ce10b19",
            "association_id": "eipassoc-0ffc273938e1576b6",
            "domain": "vpc",
            "id": "eipalloc-02d22bb3d7ce10b19",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-03ade88408d92428d",
            "private_dns": "ip-10-0-1-152.ap-south-1.compute.internal",
            "private_ip": "10.0.1.152",
            "public_dns": "ec2-3-7-96-22.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.96.22",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418236735:internet-gateway/igw-07625464bf53b2e09",
            "id": "igw-07625464bf53b2e09",
            "owner_id": "905418236735",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0eaf7f355b9801de2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d22bb3d7ce10b19",
            "association_id": "eipassoc-0ffc273938e1576b6",
            "connectivity_type": "public",
            "id": "nat-06c3c5a692d761746",
            "network_interface_id": "eni-03ade88408d92428d",
            "private_ip": "10.0.1.152",
            "public_ip": "3.7.96.22",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04e17177f13047db2",
            "tags": {
              "Name": "dev-NatGateway"
            },
            "tags_all": {
              "Name": "dev-NatGateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d97445eb7f8920691080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06c3c5a692d761746",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d97445eb7f892069",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07625464bf53b2e09",
            "id": "r-rtb-0cae7c616dd2544b41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cae7c616dd2544b4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418236735:route-table/rtb-0d97445eb7f892069",
            "id": "rtb-0d97445eb7f892069",
            "owner_id": "905418236735",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06c3c5a692d761746",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-PrivateRouteTable"
            },
            "tags_all": {
              "Name": "dev-PrivateRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eaf7f355b9801de2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418236735:route-table/rtb-0cae7c616dd2544b4",
            "id": "rtb-0cae7c616dd2544b4",
            "owner_id": "905418236735",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07625464bf53b2e09",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-PublicRouteTable"
            },
            "tags_all": {
              "Name": "dev-PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eaf7f355b9801de2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f0c38b245413156",
            "route_table_id": "rtb-0d97445eb7f892069",
            "subnet_id": "subnet-0677162af6b74cc9f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.chatbot-app"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0550364bdfdd679bc",
            "route_table_id": "rtb-0d97445eb7f892069",
            "subnet_id": "subnet-046af8fc6885571cf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7b88b510ebf319c",
            "route_table_id": "rtb-0cae7c616dd2544b4",
            "subnet_id": "subnet-04e17177f13047db2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.chatbot-app"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09961d219161c8cd3",
            "route_table_id": "rtb-0cae7c616dd2544b4",
            "subnet_id": "subnet-08938259110286bf2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418236735:subnet/subnet-0677162af6b74cc9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0677162af6b74cc9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418236735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-subnet-1"
            },
            "tags_all": {
              "Name": "dev-private-subnet-1"
            },
            "vpc_id": "vpc-0eaf7f355b9801de2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.chatbot-app"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418236735:subnet/subnet-046af8fc6885571cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046af8fc6885571cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418236735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-subnet-2"
            },
            "tags_all": {
              "Name": "dev-private-subnet-2"
            },
            "vpc_id": "vpc-0eaf7f355b9801de2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418236735:subnet/subnet-04e17177f13047db2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e17177f13047db2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418236735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-subnet-1"
            },
            "tags_all": {
              "Name": "dev-public-subnet-1"
            },
            "vpc_id": "vpc-0eaf7f355b9801de2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.chatbot-app"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418236735:subnet/subnet-08938259110286bf2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08938259110286bf2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418236735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-subnet-2"
            },
            "tags_all": {
              "Name": "dev-public-subnet-2"
            },
            "vpc_id": "vpc-0eaf7f355b9801de2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.chatbot-app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "chatbot-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418236735:vpc/vpc-0eaf7f355b9801de2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-03e2fda1abf5e7033",
            "default_route_table_id": "rtb-0e6ca456db6727753",
            "default_security_group_id": "sg-06ed81f9ab6adff67",
            "dhcp_options_id": "dopt-00b2ed938bf1915db",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eaf7f355b9801de2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e6ca456db6727753",
            "owner_id": "905418236735",
            "tags": {
              "Name": "dev-ChatbotVPC"
            },
            "tags_all": {
              "Name": "dev-ChatbotVPC"
            }
          }
        }
      ]
    }
  ]
}